# MaiAmGiaDinhViet_FrontEnd

./: .env  .env.example  .gitignore  README.md  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js
MaiAmGiaDinh_BackEnd/: .env.example  .gitignore  pyproject.toml
MaiAmGiaDinh_BackEnd/app/: check_gemini_models.py  create_admin.py  main.py  seed_data.py  test_db.py
MaiAmGiaDinh_BackEnd/app/core/: config.py  security.py
MaiAmGiaDinh_BackEnd/app/data/: all_cases.csv  all_episodes.csv  all_news.csv  general_info.md
MaiAmGiaDinh_BackEnd/app/db/: import_clean_data.py  seed_admin.py  session.py  sync_news.py
MaiAmGiaDinh_BackEnd/app/dependencies/: auth.py
MaiAmGiaDinh_BackEnd/app/models/: __init__.py  case.py  episode.py  family.py  news.py  user.py  user_case_action.py  user_episode_action.py
MaiAmGiaDinh_BackEnd/app/routers/: __init__.py  auth.py  cases.py  chatbot.py  episodes.py  families.py  news.py  user_case_actions.py  user_episode_actions.py  users.py
MaiAmGiaDinh_BackEnd/app/schemas/: __init__.py  auth.py  case.py  chat.py  episode.py  family.py  news.py  user.py  user_case_action.py  user_episode_action.py
MaiAmGiaDinh_BackEnd/maiam_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: _layout.tsx  admin.tsx  index.tsx  login.tsx  menu.tsx  notifications.tsx  password-help.tsx  settings.tsx  sign-up.tsx
components/: swipeable-bottom-sheet.tsx
constants/: api.ts  design.ts
data/: backend.ts  dev-auth.ts  episode-details.ts  mock.ts  navigation.ts  recent-episodes.ts  session.ts  validation.ts
(+19 files in other folders)
