[project]
name = "maiam-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.116.0",
    "greenlet>=3.0.3,<3.1.0",
    "google-genai>=1.0.0",
    "pandas>=2.2.0,<2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.22",
]
